# mathnexus

./: README.md  csv_audit_final.json  customer_audit.json  debug_audit.json  demo.ipynb  groceries_audit.json  manual_test_audit.json  pyproject.toml  readme.md  setup.py  test.py
.github/workflows/: publish.yml
docs/source/: conf.py
mathnexus.egg-info/: PKG-INFO  SOURCES.txt
src/cleancore/: __init__.py  audit.py  engine.py  report.py  rules.py  transform.py
src/cleancore.egg-info/: PKG-INFO
src/cleancore_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/mathnexus.egg-info/: PKG-INFO
src/provena/: __init__.py  audit.py  cli.py  logger.py  reporter.py
src/provena.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
