[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleancore-python"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "A dependency-free audit trail system for data transformations."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Logging",
]

dependencies = []  # Your library is proudly dependency-free!

[project.urls]
Homepage = "https://github.com/Sidra-009/cleancore-python-library"
"Bug Tracker" = "https://github.com/Sidra-009/cleancore-python-library/issues"
# "Documentation" = "https://github.com/Sidra-009/cleancore-python-library#readme" # Uncomment when you have docs

[tool.setuptools]
packages = ["provena"]  # The internal package name remains 'provena'
package-dir = { "" = "src" }

[project.scripts]
cleancore = "provena.cli:main"