[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleancore-python"
version = "0.1.0"
authors = [
  { name = "Sidra Bibi", email = "sidrasaqlain11@gmail.com" }
]
description = "A dependency-free audit trail system for Python data transformations."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Logging",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/Sidra-009/cleancore-python-library"
Source = "https://github.com/Sidra-009/cleancore-python-library"
Issues = "https://github.com/Sidra-009/cleancore-python-library/issues"

[tool.setuptools]
packages = ["provena"]
package-dir = { "" = "src" }

[project.scripts]
cleancore = "provena.cli:main"
